commit for forced pushed

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -4,6 +4,24 @@
 <html lang="en">
 
 <head>
+    <!-- Microsoft Clarity -->
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "blmfsk8vuw");
+</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E8C0RKSGKJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E8C0RKSGKJ');
+</script>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +29,7 @@
     <meta name="author" content="" />
     <meta name="robots" content="" />
     <meta name="description" content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users." />
-    <meta property="og:title" content="Stellar AI" />
+    <meta property="og:title" content="Steller AI" />
     <meta property="og:description" content="A website working on Artificial Intelligence algorithms and down the pike planning to model more Artificial Intelligent algorithms in its skeleton for the users." />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no">
@@ -20,7 +38,7 @@
     <link rel="icon" type="image/png" href="{% static 'images/logo/color-logo.png' %}" />
 
     <!-- PAGE TITLE HERE -->
-    <title>Stellar AI</title>
+    <title>Steller AI</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -92,7 +110,7 @@
                     <div class="container clearfix">
                         <!-- website logo -->
                         <div class="logo-header pt-2 pb-0 mostion" style="width: 180px">
-                            <a href="{% url 'home:home' %}" class="dez-page p-0"><img src="{% static 'images/home-logo.png' %}"  style="width: 200px" class="p-0"></a>
+                            <a href="{% url 'home:home' %}" class="dez-page p-0"><img src="{% static 'images/logo/home-logo.png' %}"  style="width: 200px" class="p-0"></a>
 <!--                            <p>Stellar AI</p>-->
 <!--                            <p>Stellar AI</p>-->
                         </div>
@@ -275,8 +293,8 @@
                             <div class="widget widget_services border-0">
                                 <h5 class="footer-title">Policy</h5>
                                 <ul>
-{#                                   <li><a href="{% url 'home:terms' 'refund_policy' %}">Refund Policy</a></li>#}
-{#                                   <li><a href="{% url 'home:terms' 'cancellation_policy' %}">Cancellation Policy</a></li>#}
+                                   <li><a href="{% url 'home:terms' 'refund_policy' %}">Refund Policy</a></li>
+                                   <li><a href="{% url 'home:terms' 'cancellation_policy' %}">Cancellation Policy</a></li>
                                     <li><a href="{% url 'home:terms' 'privacy-policy' %}">Privacy Policy</a></li>
                                     <li><a href="{% url 'home:terms' 'terms-and-condition' %}">Terms And Condition</a></li>
                                 </ul>
@@ -296,7 +314,6 @@
                                     <li><a target="_blank" href="https://www.linkedin.com/posts/stellarai_machinelearning-artificialintelligence-planning-activity-6897175150362443777-YGYL"><i class="fa fa-linkedin"></i></a></li>
 <!--                                    <li><a href="javascript:void(0);"><i class="fa fa-dribbble"></i></a></li>-->
                                     <li><a href="https://twitter.com/StellarAI_" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="https://discord.gg/kVmB5XA9" target="_blank"><i class="fab fa-discord"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -316,7 +333,7 @@
             <div class="footer-bottom">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 text-left "><span>Copyright © 2022 Stellar AI</span></div>
+                        <div class="col-lg-6 col-md-12 text-left "><span>Copyright © 2021 Stellar AI</span></div>
                         <div class="col-lg-6 col-md-12 text-right" ><span>Developed by <a href="http://siteguide.co.in/" target="_blank">SiteGuide</a></span></div>
 <!--                        <div class="col-lg-4 col-md-12 text-right ">-->
 <!--                            <div class="widget-link">-->
