--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -149,11 +149,11 @@ i.fa.fa-chevron-down{
 <div class="page-content bg-black" style="padding-bottom: 0em;">
     <!-- Slider Banner -->
     <div class="row">
-        <div class="col-lg-6" style="padding:8em 2em 4em 12%;background-color:black;">
+        <div class="col-lg-6" style="padding:8em 2em 4em 12%;background-color:#292929;">
              <h5 style="color:#FCB900;" class="pb-2">CODE | CONNECT | COLLABORATE</h5>
 
 
-             <h1 style="color:#fff;font-size:3em;line-height:1em;" class="pb-2 grad-h1">An <span style="color:#5596e6;"> Artificial Intelligence</span> community website</h1>
+             <h1 style="color:#fff;font-size:3em;line-height:1em;" class="pb-2 grad-h1">We are a <span style="color:#5596e6;"> blend of social network</span> and artifical intelligence learning.</h1>
 
             <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
         </div>
@@ -239,7 +239,7 @@ i.fa.fa-chevron-down{
         </div>
         <!-- featured box End -->
         <!-- about us -->
-        <div class="section-full bg-black content-inner" id="code">
+        <div class="section-full bg-black content-inner" id="code" style="background: #292929;">
             <div class="container">
                 <div class="row align-items-center about-bx1">
                     <div class="col-lg-6 col-md-6 m-b30 wow fadeInLeft" data-wow-delay="0.3s">
@@ -307,7 +307,7 @@ i.fa.fa-chevron-down{
         </div>
         <!-- overview box end -->
         <!-- overview box -->
-        <div class="section-full bg-black content-inner-1" id="sc">
+        <div class="section-full bg-black content-inner-1" id="sc" style="background: #292929;">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -383,7 +383,7 @@ i.fa.fa-chevron-down{
 <!--            </div>-->
 <!--        </div>-->
 
-        <div class="section-full bg-black content-inner-1 my-5 py-5">
+        <div class="section-full bg-black content-inner-1 my-5 py-5" style="background: #292929;">
             <div class="container">
                 <div class="overview-box style1">
                     <!-- <div class="overview-media wow fadeInLeft img-move2" data-wow-delay="0.3s">
@@ -395,7 +395,7 @@ i.fa.fa-chevron-down{
                             <div class="row">
                                 {% for f in faq %}
                                 <div class="col-lg-6">
-                                    <div class="card bg-black" style="border:none; border-bottom: 1px solid #fff;" >
+                                    <div class="card " style="border:none; border-bottom: 1px solid #fff;background: #292929;" >
                                         <div class="card-header faq-header collapsed" data-toggle="collapse" data-target="#collapseFAQ{{f.id}}" aria-expanded="false" aria-controls="collapseFAQ{{f.id}}">
                                             <div class="d-flex align-items-center justify-content-between">
                                                 <span class="text-primary">{{f.question}}</span>
