plan and home page

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -159,7 +159,7 @@ i.fa.fa-chevron-down{
         </div>
 
         <div class="col-lg-6" style="background: black;height: 500px;">
-            <center><video id="myVideo" autoplay muted loop style="height: 500px;width: 100%;">
+            <center><video id="myVideo" autoplay muted loop controls style="height: 500px;width: 100%;">
 <!--                https://stellar-ai.in/static/video/dark.mp4-->
               <source src="{% static 'video/dark.mp4' %}" type="video/mp4">
               <source src="{% static 'video/dark.mp4' %}" type="video/ogg">
