--- a/home/templates/home/social_base.html
+++ b/home/templates/home/social_base.html
@@ -137,7 +137,7 @@
                         {% else %}
                         <a class="icon-link" href="javascript:void(0);">
                         {% endif %}
-                            <i class="fa fa-users" aria-hidden="true"></i>
+                            <i class="mdi mdi-account-multiple-outline"></i>
                             {% if total_message_count > 0 %}
                             <div class="custom-indicator red">
                                 {{total_message_count}}
@@ -673,7 +673,7 @@
                     <a class="icon-link" href="javascript:void(0);">
                     {% endif %}
 {#                        <i data-feather="mail"></i>#}
-                        <i class="fa fa-users" aria-hidden="true"></i>
+                        <i class="mdi mdi-account-multiple-outline"></i>
                         {% if total_message_count > 0 %}
                         <div class="custom-indicator red">
                             {{total_message_count}}
