--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -254,15 +254,16 @@ i.fa.fa-chevron-down{
                             <h2 class="title text-primary">AI CODE ROOMS</h2>
 <!--                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>-->
 <!--                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Code rooms for personal growth.</p>-->
-                               <ul style="color:#fff">
-                                   <li>Live Audio and Video for users inside the AI code-room / meeting.</li>
-                                   <li>Live Coding Interface where live coding can happen where one user can see another user coding live , all the different Machine Learning / Deep Learning / Artificial Intelligence Libraries are provided in the Coding Interface</li>
-                                   <li>Python coders/students/developers/employees/companies anyone can come and use this unique code-room for growth.</li>
-                                   <li>Live Chatting for users inside the code-room/meeting.</li>
-<!--                                   <li>Every Code-room has a host/admin who can add ‘n’ number of people in the group according to the plan he buys.</li>-->
-<!--                                   <li>Every Code-room has a host/admin who has the power to add/remove any user he/she wants.</li>-->
-<!--                                   <li>	In the absence of the host/admin still all the code-room members can code and run algorithms on the coding interface.</li>-->
-                               </ul>
+{#                               <ul style="color:#fff">#}
+{#                                   <li>Live Audio and Video for users inside the AI code-room / meeting.</li>#}
+{#                                   <li>Live Coding Interface where live coding can happen where one user can see another user coding live , all the different Machine Learning / Deep Learning / Artificial Intelligence Libraries are provided in the Coding Interface</li>#}
+{#                                   <li>Python coders/students/developers/employees/companies anyone can come and use this unique code-room for growth.</li>#}
+{#                                   <li>Live Chatting for users inside the code-room/meeting.</li>#}
+{#<!--                                   <li>Every Code-room has a host/admin who can add ‘n’ number of people in the group according to the plan he buys.</li>-->#}
+{#<!--                                   <li>Every Code-room has a host/admin who has the power to add/remove any user he/she wants.</li>-->#}
+{#<!--                                   <li>	In the absence of the host/admin still all the code-room members can code and run algorithms on the coding interface.</li>-->#}
+{#                               </ul>#}
+                            <p>A Stellar AI code-room is a unique SaaS of Stellar AI, which has a exciting environment where one can do real time live collaborative coding with anyone you are friends with on the Stellar AI Ecosystem. Every code-room has an owner/admin. Once you find a user/connection on the Ecosystem you have to send that person a friend request add that person a friend then you can add them in your particular owned code-room and start with your real time coding , data science , algorithm making , etc. It is the most user-friendly way to connect any national and international users and grow together. It also has real time audio calls, video calls and chatting making it more user-friendly.</p>
                                         <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
 
 
