--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -7,11 +7,10 @@
     box-sizing:border-box;
 }
 .pricing-table{
-  {#background-color: #eee;#}
+  background-color: #eee;
   font-family: 'Montserrat', sans-serif;
   padding-top: 5rem;
 }
-
 
 .pricing-table .block-heading {
   padding-top: 50px;
@@ -280,18 +279,78 @@ th{
 
                 <tr>
                   <th scope="row" style="text-align: left;"></th>
-                  <th></th>
-{#                    {% for item in object_list %}#}
-                  <th><div class="c-button button is-fullwidth modal-trigger" data-modal="plan-details-{{item.id}}" onclick="window.location.href = '{% url "order:payment-request" 1 %}'" style="margin: 0em;">
+                    <th></th>
+                     {% for object in object_list %}
+                  <th>
+                      <div class="c-button button is-fullwidth modal-trigger" data-modal="plan-details-{{object.id}}" style="margin: 0em;">
                                  Buy Now
-                                </div></th>
-{#                    {% endfor %}#}
-                  <th><div class="c-button button is-fullwidth modal-trigger" data-modal="plan-details-{{object.id}}" onclick="window.location.href = '{% url "order:payment-request" 2 %}'" style="margin: 0em;">
-                                 Buy Now
-                                </div></th>
-                  <th><div class="c-button button is-fullwidth modal-trigger" data-modal="plan-details-{{object.id}}" onclick="window.location.href = '{% url "order:payment-request" 4 %}'" style="margin: 0em;">
-                                 Buy Now
-                                </div></th>
+                                </div>
+
+                    <div id="plan-details-{{object.id}}" class="modal is-medium has-light-bg">
+                          <div class="modal-background"></div>
+                          <div class="modal-content" style="max-width: 100vw; width: 460px;">
+                              <div class="card p-3">
+                                  <div class="card-heading">
+                                      <h3 style="font-size: 1.5rem;">Plan Summary</h3>
+                                      <!-- Close X button -->
+                                      <div class="close-wrap">
+                                          <span class="close-modal">
+                                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+                                          </span>
+                                      </div>
+                                  </div>
+                                  <div class="card-body pb-4">
+                                      <div class="columns">
+                                          <div class="column is-12 plan-info" style="overflow-y: auto; text-align: center;">
+                                            <p class="c-field">
+                                              Type<br>
+                                              <span>{{object.title}}</span>
+                                            </p>
+                                            <p class="c-field">
+                                              Cost<br>
+                                              <span>₹{{object.cost}}</span>
+                                            </p>
+                                            <p class="c-field">
+                                              Duration<br>
+                                              <span>{{object.duration}} days</span>
+                                            </p>
+                                            <p class="c-field">
+                                              Total groups allowed<br>
+                                              <span>{{object.total_group_create_size}} groups</span>
+                                            </p>
+                                            <p class="c-field">
+                                              Members per group<br>
+                                              <span>{{object.group_size}} members</span>
+                                            </p>
+
+                                            <form action="#" method="POST" class="plan-form">
+                                              {% csrf_token %}
+                                              <label class="mt-3 mb-4" style="font-weight: 500; justify-content:start;">
+                                                <input type="checkbox" style="vertical-align:middle;" onchange="toggleCoupon(event)">
+                                                &nbsp;
+                                                <span class="mb-1">I want to use a coupon.</span>
+                                              </label>
+                                              <div class="control has-icon mb-4" data-wrap="coupon-wrap" style="font-size: 1.3rem; width: 80%; text-align: center; display:none;">
+                                                <input type="text" class="input" placeholder="Enter code" name="coupon_code">
+                                                <div class="form-icon">
+                                                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+                                                </div>
+                                              </div>
+                                              <!-- <button type="submit" class="c-button button is-solid accent-button is-fullwidth mt-5 mb-1"></button> -->
+                                              <a href="{% url 'order:payment-request' object.id %}"
+                                                  class="c-button button is-solid accent-button is-fullwidth mt-2 py-4" style="width: 90%;">
+                                                Proceed &#10142;
+                                              </a>
+                                            </form>
+                                        </div>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                    {% endfor %}
+
+                    </th>
                 </tr>
 
 
