--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -264,7 +264,7 @@ i.fa.fa-chevron-down{
 {#<!--                                   <li>	In the absence of the host/admin still all the code-room members can code and run algorithms on the coding interface.</li>-->#}
 {#                               </ul>#}
                             <p style="color:white;">A Stellar AI code-room is a unique SaaS of Stellar AI, which has a exciting environment where one can do real time live collaborative coding with anyone you are friends with on the Stellar AI Ecosystem. Every code-room has an owner/admin. Once you find a user/connection on the Ecosystem you have to send that person a friend request add that person a friend then you can add them in your particular owned code-room and start with your real time coding , data science , algorithm making , etc. It is the most user-friendly way to connect any national and international users and grow together. It also has real time audio calls, video calls and chatting making it more user-friendly.</p>
-                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
+                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Real Time Live Collaborative Coding <span></span></a>
 
 
 
@@ -295,7 +295,7 @@ i.fa.fa-chevron-down{
                                 <p style="color:#fff">A place where anyone can post their particular doubts , questions , errors, discussions and expect instant solutions/help from anyone in the community.</p>
                                 <p style="color:#fff">AI Algorithms like Recommendation System , Clustering are used here in the backend for a better and more efficient user experience that connects like-minded and similar background people together.</p>
                                 <!--                                <a href="#" class="btn btn-gradient btn-md radius-xl">Explor More</a>-->
-                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
+                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Bonding <span></span></a>
 
                             </div>
                             <div class="overview-media wow fadeInRight img-move" data-wow-delay="0.6s">
@@ -321,7 +321,7 @@ i.fa.fa-chevron-down{
                                 <h2 class="title text-primary">AI SKELETON CODES
                                 </h2>
                                 <p style="color:#fff">An environment where Machine Learning and Deep Learning professionals/students can directly use filters and get the basic skeleton code and then edit it further for the project requirement</p>
-                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
+                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Learning <span></span></a>
 
                             </div>
                         </div>
@@ -341,7 +341,7 @@ i.fa.fa-chevron-down{
                                 <p style="color:#fff">An ecosystem where different types of Machine Learning, Deep Learning and AI competitions will be hosted here for a more competitive experience.
                                 </p>
                                 <p style="color:#fff">Any Institution, Company, Organization with a  Business Problem on AI  can host the particular Dataset on our ecosystem</p>
-                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
+                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Competing <span></span></a>
 
                             </div>
                             <div class="overview-media wow fadeInRight img-move" data-wow-delay="0.6s">
