--- a/home/templates/home/plan.html
+++ b/home/templates/home/plan.html
@@ -232,14 +232,14 @@ th{
                 </tr>
                 <tr>
                   <th scope="row" style="text-align: left;">Live Video Calling</th>
-                  <td><i class="fa fa-close" style="color: white;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                 </tr>
               <tr>
                   <th scope="row" style="text-align: left;">Live Audio Calling</th>
-                  <td><i class="fa fa-close" style="color: white;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -247,7 +247,7 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">Live Chat</th>
-                  <td><i class="fa fa-close" style="color: white;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -255,7 +255,7 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">Real Time Collaborative Coding</th>
-                  <td><i class="fa fa-close" style="color: white;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
@@ -263,8 +263,8 @@ th{
 
               <tr>
                   <th scope="row" style="text-align: left;">24/7 Support Discord Server Access</th>
-                  <td><i class="fa fa-close" style="color: white;"></i></td>
-                  <td><i class="fa fa-close" style="color: white;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
+                  <td><i class="fa fa-close" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                   <td><i class="fa fa-check" style="color: yellow;"></i></td>
                 </tr>
