home.html page updated

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -159,7 +159,7 @@ i.fa.fa-chevron-down{
         </div>
 
         <div class="col-lg-6" style="background: black;height: 500px;">
-            <center><video id="myVideo" autoplay muted loop controls style="height: 500px;width: 100%;">
+            <center><video id="myVideo" autoplay muted loop style="height: 500px;width: 100%;">
 <!--                https://stellar-ai.in/static/video/dark.mp4-->
               <source src="{% static 'video/dark.mp4' %}" type="video/mp4">
               <source src="{% static 'video/dark.mp4' %}" type="video/ogg">
@@ -185,57 +185,45 @@ i.fa.fa-chevron-down{
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 m-b30 wow fadeInUp " data-wow-delay="0.2s">
-                        <div class="icon-bx-wraper featured-box style1 shadow radius-md zigzag" style="background-color:#FCB900;padding:2em 3em;height:8.5em;">
-<!--                            <div class="icon-xl m-b20">-->
-<!--                                <a href="javascript:void(0);" class="icon-cell"><img-->
-<!--                                        src="{% static 'images/icon/icon1.png' %}" alt=""></a>-->
-<!--                            </div>-->
-                            <div>
+                        <div class="icon-bx-wraper featured-box style1 shadow radius-md zigzag" style="background: url('{% static 'images/h-sec/coederoom.png' %}');background-position: 50% 50%;color: #fff;padding: 0em;">
+                            <div style="background: rgb(0, 0, 0);background: rgba(0, 0, 0, 0.5);color: white;padding:2em 3em;height:14.5em;">
                                 <a href="#code">
-                                    <div  style="color:#fff;font-weight: 600;font-weight: revert;margin:0;font-size:1.5em;">AI CODE ROOM</div>
+                                    <div  class="mt-5"  style="color:#fff;font-weight: 600;font-size:1.5em;position: relative;z-index: 10;">AI CODE ROOM</div>
                                 </a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 m-b30 wow fadeInUp " data-wow-delay="0.2s">
-                        <div class="icon-bx-wraper featured-box style1 shadow radius-md zigzag" style="background-color:#FCB900;padding:2em 3em;height:8.5em;">
-<!--                            <div class="icon-xl m-b20">-->
-<!--                                <a href="javascript:void(0);" class="icon-cell"><img-->
-<!--                                        src="{% static 'images/icon/icon1.png' %}" alt=""></a>-->
-<!--                            </div>-->
-                            <div>
-                                <a href="#forums">
-                                    <div  style="color:#fff;font-weight: 600;font-weight: revert;margin:0;font-size:1.5em;">AI COMMUNITY</div>
-                                </a>
+                         <div class="icon-bx-wraper featured-box style1 shadow radius-md zigzag" style="background: url('{% static 'images/h-sec/aic.png' %}');background-position: 50% 50%;color: #fff;padding: 0em;">
+                            <div style="background: rgb(0, 0, 0);background: rgba(0, 0, 0, 0.5);color: white;padding:2em 3em;height:14.5em;">
+                                    <a href="#forums">
+                                        <div class="mt-5" style="color:#fff;font-weight: 600;font-weight: revert;margin:0;font-size:1.3em;text-align:center;">AI <br>COMMUNITY</div>
+                                    </a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 m-b30 wow fadeInUp " data-wow-delay="0.2s">
-                        <div class="icon-bx-wraper featured-box style1 shadow radius-md zigzag" style="background-color:#FCB900;padding:2em 1em;height:8.5em;">
-<!--                            <div class="icon-xl m-b20">-->
-<!--                                <a href="javascript:void(0);" class="icon-cell"><img-->
-<!--                                        src="{% static 'images/icon/icon1.png' %}" alt=""></a>-->
-<!--                            </div>-->
+                         <div class="icon-bx-wraper featured-box style1 shadow radius-md zigzag" style="background: url('{% static 'images/h-sec/skeleton.png' %}');background-position: 50% 50%;color: #fff;padding: 0em;">
+                            <div style="background: rgb(0, 0, 0);background: rgba(0, 0, 0, 0.5);color: white;padding:2em 3em;height:14.5em;">
                             <div>
                                 <a href="#sc">
-                                <div  style="color:#fff;font-weight: 600;font-weight: revert;margin:0;font-size:1.5em;">AI SKELETON CODES</div>
+                                <div class="mt-5" style="color:#fff;font-weight: 600;font-weight: revert;margin:0;font-size:1.5em;">AI SKELETON CODES</div>
                                 </a>
                             </div>
                         </div>
+                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 m-b30 wow fadeInUp " data-wow-delay="0.2s">
-                        <div class=" icon-bx-wraper featured-box style1 shadow radius-md zigzag" style="background-color:#FCB900;padding:2em 2em;height:8.5em;width:100%">
-<!--                            <div class="icon-xl m-b20">-->
-<!--                                <a href="javascript:void(0);" class="icon-cell"><img-->
-<!--                                        src="{% static 'images/icon/icon1.png' %}" alt=""></a>-->
-<!--                            </div>-->
+                         <div class="icon-bx-wraper featured-box style1 shadow radius-md zigzag" style="background: url('{% static 'images/h-sec/comp.png' %}');background-position: 50% 50%;background-size: contain;background-repeat:no-repeat;color: #fff;padding: 0em;">
+                            <div style="background: rgb(0, 0, 0);background: rgba(0, 0, 0, 0.5);color: white;padding:2em 3em;height:14.5em;">
                             <a href="#comp">
-                                <div  style="color:#fff;font-weight: 600;font-weight: revert;margin:0;font-size:1.5em;">AI COMPETITIONS</div >
+                                <div class="mt-5" style="color:#fff;font-weight: 600;font-weight: revert;margin:0;font-size:1.5em;">AI COMPETITIONS</div >
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         <!-- featured box End -->
         <!-- about us -->
@@ -254,17 +242,16 @@ i.fa.fa-chevron-down{
                             <h2 class="title text-primary">AI CODE ROOMS</h2>
 <!--                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>-->
 <!--                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Code rooms for personal growth.</p>-->
-{#                               <ul style="color:#fff">#}
-{#                                   <li>Live Audio and Video for users inside the AI code-room / meeting.</li>#}
-{#                                   <li>Live Coding Interface where live coding can happen where one user can see another user coding live , all the different Machine Learning / Deep Learning / Artificial Intelligence Libraries are provided in the Coding Interface</li>#}
-{#                                   <li>Python coders/students/developers/employees/companies anyone can come and use this unique code-room for growth.</li>#}
-{#                                   <li>Live Chatting for users inside the code-room/meeting.</li>#}
-{#<!--                                   <li>Every Code-room has a host/admin who can add ‘n’ number of people in the group according to the plan he buys.</li>-->#}
-{#<!--                                   <li>Every Code-room has a host/admin who has the power to add/remove any user he/she wants.</li>-->#}
-{#<!--                                   <li>	In the absence of the host/admin still all the code-room members can code and run algorithms on the coding interface.</li>-->#}
-{#                               </ul>#}
-                            <p style="color:white;">A Stellar AI code-room is a unique SaaS of Stellar AI, which has a exciting environment where one can do real time live collaborative coding with anyone you are friends with on the Stellar AI Ecosystem. Every code-room has an owner/admin. Once you find a user/connection on the Ecosystem you have to send that person a friend request add that person a friend then you can add them in your particular owned code-room and start with your real time coding , data science , algorithm making , etc. It is the most user-friendly way to connect any national and international users and grow together. It also has real time audio calls, video calls and chatting making it more user-friendly.</p>
-                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Real Time Live Collaborative Coding <span></span></a>
+                               <ul style="color:#fff">
+                                   <li>Live Audio and Video for users inside the AI code-room / meeting.</li>
+                                   <li>Live Coding Interface where live coding can happen where one user can see another user coding live , all the different Machine Learning / Deep Learning / Artificial Intelligence Libraries are provided in the Coding Interface</li>
+                                   <li>Python coders/students/developers/employees/companies anyone can come and use this unique code-room for growth.</li>
+                                   <li>Live Chatting for users inside the code-room/meeting.</li>
+<!--                                   <li>Every Code-room has a host/admin who can add ‘n’ number of people in the group according to the plan he buys.</li>-->
+<!--                                   <li>Every Code-room has a host/admin who has the power to add/remove any user he/she wants.</li>-->
+<!--                                   <li>	In the absence of the host/admin still all the code-room members can code and run algorithms on the coding interface.</li>-->
+                               </ul>
+                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
 
 
 
@@ -295,7 +282,7 @@ i.fa.fa-chevron-down{
                                 <p style="color:#fff">A place where anyone can post their particular doubts , questions , errors, discussions and expect instant solutions/help from anyone in the community.</p>
                                 <p style="color:#fff">AI Algorithms like Recommendation System , Clustering are used here in the backend for a better and more efficient user experience that connects like-minded and similar background people together.</p>
                                 <!--                                <a href="#" class="btn btn-gradient btn-md radius-xl">Explor More</a>-->
-                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Bonding <span></span></a>
+                                        <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
 
                             </div>
                             <div class="overview-media wow fadeInRight img-move" data-wow-delay="0.6s">
@@ -321,7 +308,7 @@ i.fa.fa-chevron-down{
                                 <h2 class="title text-primary">AI SKELETON CODES
                                 </h2>
                                 <p style="color:#fff">An environment where Machine Learning and Deep Learning professionals/students can directly use filters and get the basic skeleton code and then edit it further for the project requirement</p>
-                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Learning <span></span></a>
+                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
 
                             </div>
                         </div>
@@ -341,7 +328,7 @@ i.fa.fa-chevron-down{
                                 <p style="color:#fff">An ecosystem where different types of Machine Learning, Deep Learning and AI competitions will be hosted here for a more competitive experience.
                                 </p>
                                 <p style="color:#fff">Any Institution, Company, Organization with a  Business Problem on AI  can host the particular Dataset on our ecosystem</p>
-                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Competing <span></span></a>
+                                       <a href="{% url 'user:register' %}"  class="btn radius-xl btn-sign btn-aware">Start Coding <span></span></a>
 
                             </div>
                             <div class="overview-media wow fadeInRight img-move" data-wow-delay="0.6s">
